# Password-Manager-Python

./: README.md  data.json  pyproject.toml
password_manager_python/: account.py  crypto.py  db_jobs.py  feature.py  main.py  mongo_db_client.py  printer.py  receptionist.py  system_interact.py
tests/: test.py
